--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -7,7 +7,9 @@ project(libcolortwist VERSION 0.1.0)
 #FIND_PACKAGE (IPP REQUIRED )
 set (LIBCOLORTWIST_SOURCES  colortwist.h
                             colortwist.cpp
+                            colortwist_ipp.h
                             colortwist_ipp.cpp
+                            colortwist_avx.h
                             colortwist_avx.cpp)
 
 #[[
@@ -30,7 +32,7 @@ endif()
 
 configure_file (
   "${CMAKE_CURRENT_SOURCE_DIR}/colortwist_config.h.in"
-  "${CMAKE_CURRENT_SOURCE_DIR}/colortwist_config.h"
+  "${CMAKE_CURRENT_BINARY_DIR}/colortwist_config.h"
 	ESCAPE_QUOTES @ONLY)                
 
 #set(CPACK_PROJECT_NAME ${PROJECT_NAME})
@@ -44,9 +46,13 @@ target_include_directories (libcolortwist PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 # this is necessary so that we can find "colortwist_config.h" which we created above
 target_include_directories(libcolortwist PRIVATE  ${CMAKE_CURRENT_BINARY_DIR})  
 
-if (MSVC)
- set_source_files_properties(colortwist_avx.cpp PROPERTIES COMPILE_FLAGS /arch:AVX2)
-endif()
-if (CMAKE_COMPILER_IS_GNUCXX)
- set_source_files_properties(colortwist_avx.cpp PROPERTIES COMPILE_FLAGS -mfma)
+message(STATUS ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
+
+if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "AMD64" OR ${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64") 
+  if (MSVC)
+   set_source_files_properties(colortwist_avx.cpp PROPERTIES COMPILE_FLAGS /arch:AVX2)
+  endif()
+  if (CMAKE_COMPILER_IS_GNUCXX)
+   set_source_files_properties(colortwist_avx.cpp PROPERTIES COMPILE_FLAGS -mfma)
+  endif()
 endif()
