--- a/lib/colortwist_config.h.in
+++ b/lib/colortwist_config.h.in
@@ -2,4 +2,6 @@
 
 #define COLORTWISTLIB_HASIPP  @COLORTWIST_HAS_IPP@
 
-#define COLORTWISTLIB_HASAVX  1
+#define COLORTWISTLIB_HASAVX  @COLORTWISE_HAS_AVX@
+
+#define COLORTWISTLIB_HASNEON  1
