--- a/lib/colortwist_config.h.in
+++ b/lib/colortwist_config.h.in
@@ -4,4 +4,4 @@
 
 #define COLORTWISTLIB_HASAVX  @COLORTWISE_HAS_AVX@
 
-#define COLORTWISTLIB_HASNEON  1
+#define COLORTWISTLIB_HASNEON  @COLORTWIST_HAS_NEON@
