--- a/lib/colortwist_config.h.in
+++ b/lib/colortwist_config.h.in
@@ -5,3 +5,5 @@
 #define COLORTWISTLIB_HASAVX  @COLORTWISE_HAS_AVX@
 
 #define COLORTWISTLIB_HASNEON  @COLORTWIST_HAS_NEON@
+
+#define COLORTWISTLIB_HAS_SYS_AUXV_H @COLORTWIST_HAS_SYS_AUXV_H@
