--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -84,5 +84,6 @@ if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "armv7l")
  #set_source_files_properties(colortwist_neon.cpp PROPERTIES COMPILE_FLAGS -march=armv7-a)
 elseif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "armv6l")
  set_target_properties(libcolortwist PROPERTIES COMPILE_FLAGS -mfpu=auto)
- set_target_properties(libcolortwist PROPERTIES COMPILE_FLAGS -mfloat-abi=soft)
+ set_target_properties(libcolortwist PROPERTIES COMPILE_FLAGS -mhard-float)
+ set_target_properties(libcolortwist PROPERTIES COMPILE_FLAGS -mfloat-abi=hard)
 endif()
