--- a/lib/colortwist_config.h.in
+++ b/lib/colortwist_config.h.in
@@ -6,4 +6,6 @@
 
 #define COLORTWISTLIB_HASNEON  @COLORTWIST_HAS_NEON@
 
+#define COLORTWISTLIB_CANUSENEONINTRINSIC_VCVTNQ_U32_F32 @COLORTWISTLIB_CANUSENEONINTRINSIC_VCVTNQ_U32_F32@
+
 #define COLORTWISTLIB_HAS_SYS_AUXV_H @COLORTWIST_HAS_SYS_AUXV_H@
