--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -80,7 +80,10 @@ if (COLORTWIST_HAS_NEON)
      OUTPUT_VARIABLE OUTPUT_NEONTESTCOMPILE)
      message(STATUS "vcvtnq_u32_f32-try_run: " ${__RESULT_NEONVCVTNQ_RUNTEST} - ${__RESULT_NEONVCVTNQ_COMPILETEST})
      if (__RESULT_NEONVCVTNQ_COMPILETEST AND __RESULT_NEONVCVTNQ_RUNTEST EQUAL 0)
-       set(COLORTWISTLIB_CANUSENEONINTRINSIC_VCVTNQ_U32_F32 0)
+       message(STATUS "test whether intrinsic 'vcvtnq_u32_f32' works -> SUCCESS")
+       set(COLORTWISTLIB_CANUSENEONINTRINSIC_VCVTNQ_U32_F32 1)
+     else()
+       message(STATUS "test whether intrinsic 'vcvtnq_u32_f32' works -> FAILURE")
      endif()
 endif()
 
