--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -77,8 +77,9 @@ if (COLORTWIST_HAS_NEON)
      ${CMAKE_CURRENT_BINARY_DIR}  
      ${CMAKE_CURRENT_SOURCE_DIR}/../cmakemodules/checks/canuse_vcvtnq_u32_f32_intrinsic.cpp 
      COMPILE_DEFINITIONS ${COMPILEDEFINITIONS_FOR_NEON}
-     OUTPUT_VARIABLE OUTPUT_NEONTESTCOMPILE)
-     message(STATUS "vcvtnq_u32_f32-try_run: " ${__RESULT_NEONVCVTNQ_RUNTEST} - ${__RESULT_NEONVCVTNQ_COMPILETEST})
+     OUTPUT_VARIABLE OUTPUT_NEONTESTCOMPILE
+     RUN_OUTPUT_VARIABLE RUN_OUTPUT_NEON)
+     message(STATUS "vcvtnq_u32_f32-try_run: " ${OUTPUT_NEONTESTCOMPILE} - ${RUN_OUTPUT_NEON} - ${__RESULT_NEONVCVTNQ_RUNTEST} - ${__RESULT_NEONVCVTNQ_COMPILETEST})
      if (__RESULT_NEONVCVTNQ_COMPILETEST AND __RESULT_NEONVCVTNQ_RUNTEST EQUAL 0)
        message(STATUS "test whether intrinsic 'vcvtnq_u32_f32' works -> SUCCESS")
        set(COLORTWISTLIB_CANUSENEONINTRINSIC_VCVTNQ_U32_F32 1)
