--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -76,7 +76,7 @@ if (COLORTWIST_HAS_NEON)
      ${CMAKE_CURRENT_BINARY_DIR}  
      ${CMAKE_CURRENT_SOURCE_DIR}/../cmakemodules/checks/canuse_vcvtnq_u32_f32_intrinsic.cpp 
      COMPILE_DEFINITIONS ${COMPILEDEFINITIONS_FOR_NEON}
-     OUTPUT_VARIABLE RESULT_NEONVCVTNQ_COMPILETEST
+     COMPILE_OUTPUT_VARIABLE RESULT_NEONVCVTNQ_COMPILETEST
      RUN_OUTPUT_VARIABLE RESULT_NEONVCVTNQ_RUNTEST)
      message(STATUS "vcvtnq_u32_f32-try_run: " ${RESULT_NEONVCVTNQ_COMPILETEST} - ${RESULT_NEONVCVTNQ_RUNTEST} )
      if (__RESULT_NEONVCVTNQ_COMPILETEST AND __RESULT_NEONVCVTNQ_RUNTEST EQUAL 0)
