--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -43,7 +43,7 @@ if (ARMNEONFOUND)
    ${CMAKE_CURRENT_SOURCE_DIR}/../cmakemodules/checks/cpu_neon.cpp 
    COMPILE_DEFINITIONS -mfpu=neon
    OUTPUT_VARIABLE OUTPUT_NEONTESTCOMPILE)
-   #message(STATUS "try_run: " ${__RESULT_NEON_RUNTEST} - ${__RESULT_NEON_COMPILETEST})
+   #message(STATUS "try_run: " ${OUTPUT_NEONTESTCOMPILE} : ${__RESULT_NEON_RUNTEST} - ${__RESULT_NEON_COMPILETEST})
  if (__RESULT_NEON_COMPILETEST AND __RESULT_NEON_RUNTEST EQUAL 0)
   message(STATUS "Test for Neon-support succeeded, Neon-support is enabled.")
   set(COLORTWIST_HAS_NEON 1)
@@ -83,7 +83,7 @@ if (COLORTWIST_HAS_NEON)
      COMPILE_DEFINITIONS "${COMPILEDEFINITIONS_FOR_NEON}" 
      COMPILE_OUTPUT_VARIABLE RESULT_NEONVCVTNQ_COMPILETEST
      RUN_OUTPUT_VARIABLE RESULT_NEONVCVTNQ_RUNTEST)
-     message(STATUS "vcvtnq_u32_f32-try_run: " ${RESULT_NEONVCVTNQ_COMPILETEST} - ${RESULT_NEONVCVTNQ_RUNTEST} )
+     #message(STATUS "vcvtnq_u32_f32-try_run: " ${RESULT_NEONVCVTNQ_COMPILETEST} - ${RESULT_NEONVCVTNQ_RUNTEST} )
      if (__RESULT_NEON_VCVTNQ_U32_F32COMPILETEST AND __RESULT_NEON_VCVTNQ_U32_F32RUNTEST EQUAL 0)
        message(STATUS "test whether intrinsic 'vcvtnq_u32_f32' is available -> YES")
        set(COLORTWISTLIB_CANUSENEONINTRINSIC_VCVTNQ_U32_F32 1)
