--- a/lib/colortwist_config.h.in
+++ b/lib/colortwist_config.h.in
@@ -2,7 +2,9 @@
 
 #define COLORTWISTLIB_HASIPP  @COLORTWIST_HAS_IPP@
 
-#define COLORTWISTLIB_HASAVX  @COLORTWISE_HAS_AVX@
+#define COLORTWISTLIB_HASAVX  @COLORTWIST_HAS_AVX@
+
+#define COLORTWISTLIB_HASSSSE3  @COLORTWISE_HAS_SSSE3@
 
 #define COLORTWISTLIB_HASNEON  @COLORTWIST_HAS_NEON@
 
