--- a/lib/colortwist_config.h.in
+++ b/lib/colortwist_config.h.in
@@ -4,7 +4,7 @@
 
 #define COLORTWISTLIB_HASAVX  @COLORTWIST_HAS_AVX@
 
-#define COLORTWISTLIB_HASSSSE3  @COLORTWISE_HAS_SSSE3@
+#define COLORTWISTLIB_HASSSSE3  @COLORTWIST_HAS_SSSE3@
 
 #define COLORTWISTLIB_HASNEON  @COLORTWIST_HAS_NEON@
 
