--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -150,8 +150,7 @@
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
-      "inheritEnvironments": [ "msvc_arm64_x64" ],
-      "variables": []
+      "inheritEnvironments": [ "msvc_arm64_x64" ]
     },
     {
       "name": "arm64-Release",
@@ -162,7 +161,18 @@
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
-      "inheritEnvironments": [ "msvc_arm64_x64" ],
+      "inheritEnvironments": [ "msvc_arm64_x64" ]
+    },
+    {
+      "name": "x86-Debug",
+      "generator": "Ninja",
+      "configurationType": "Debug",
+      "buildRoot": "${projectDir}\\out\\build\\${name}",
+      "installRoot": "${projectDir}\\out\\install\\${name}",
+      "cmakeCommandArgs": "",
+      "buildCommandArgs": "",
+      "ctestCommandArgs": "",
+      "inheritEnvironments": [ "msvc_x86" ],
       "variables": []
     }
   ]
