--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -141,7 +141,7 @@ elseif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "i686" OR ${CMAKE_SYSTEM_PROCESSOR} MAT
   endif()
   if (CMAKE_COMPILER_IS_GNUCXX)
    set_source_files_properties(colortwist_avx.cpp PROPERTIES COMPILE_FLAGS "-mfma -mavx2")
-   set_source_files_properties(colortwist_sse.cpp PROPERTIES COMPILE_FLAGS "-msse2")
+   set_source_files_properties(colortwist_sse.cpp PROPERTIES COMPILE_FLAGS "-msse2 -msse4.1")
   endif()
 endif()
 
