--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -60,7 +60,7 @@
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
       "inheritEnvironments": [ "linux_x64" ],
-      "remoteMachineName": "1659364886;stream7 (username=jbohl, port=22, authentication=Password)",
+      "remoteMachineName": "-859745167;192.168.2.238 (username=jbohl, port=2222, authentication=Password)",
       "remoteCMakeListsRoot": "$HOME/.vs/${projectDirName}/${workspaceHash}/src",
       "remoteBuildRoot": "$HOME/.vs/${projectDirName}/${workspaceHash}/out/build/${name}",
       "remoteInstallRoot": "$HOME/.vs/${projectDirName}/${workspaceHash}/out/install/${name}",
