--- a/lib/colortwist_config.h.in
+++ b/lib/colortwist_config.h.in
@@ -2,9 +2,10 @@
 
 #define COLORTWISTLIB_HASIPP  @COLORTWIST_HAS_IPP@
 
-#define COLORTWISTLIB_HAS_INTEL_INTRINSICS  @COLORTWISE_HAS_IMMINTRIN@  // whether the header <immintrin.h> is available or not (which is a meta-header for AVX, AVX2, FMA, etc.))
+#define COLORTWISTLIB_HAS_INTEL_INTRINSICS  @COLORTWIST_HAS_IMMINTRIN@  // whether the header <immintrin.h> is available or not (which is a meta-header for AVX, AVX2, FMA, etc.))
 
 //#define COLORTWISTLIB_HASSSE42_INTRINSICS @COLORTWISTLIB_HASSSE42_INTRINSICS@ // whether the header <nmmintrin.h> is available or not (associated with the SSE4.2 instruction set))
+#define COLORTWISTLIB_HAS_MM_LOADU_SI16_INTRINSICS @HAS_MM_LOADU_SI16_INTRINSIC@
 
 #define COLORTWISTLIB_HASNEON  @COLORTWIST_HAS_NEON@
 
