--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -40,13 +40,28 @@ endif()
 if (COLORTWIST_HAS_IMMINTRIN )
   check_symbol_exists(_mm_loadu_si16 immintrin.h HAS_MM_LOADU_SI16_INTRINSIC)
   if (HAS_MMLOADUSI16_INTRINSIC)
-    message(STATUS "Found _mm_loadu_si16 intrinsic")
     set(HAS_MM_LOADU_SI16_INTRINSIC 1)
   else()
     set(HAS_MM_LOADU_SI16_INTRINSIC 0)
   endif()
+
+  check_symbol_exists(_mm_loadu_si32 immintrin.h HAS_MM_LOADU_SI32_INTRINSIC)
+  if (HAS_MM_LOADU_SI32_INTRINSIC)
+    set(HAS_MM_LOADU_SI32_INTRINSIC 1)
+  else()
+    set(HAS_MM_LOADU_SI32_INTRINSIC 0)
+  endif()
+
+  check_symbol_exists(_mm_storeu_si32 immintrin.h HAS_MM_STOREU_SI32_INTRINSIC)
+  if (HAS_MM_STOREU_SI32_INTRINSIC)
+    set(HAS_MM_STOREU_SI32_INTRINSIC 1)
+  else()
+    set(HAS_MM_STOREU_SI32_INTRINSIC 0)
+  endif()
 else()
   set(HAS_MM_LOADU_SI16_INTRINSIC 0)
+  set(HAS_MM_LOADU_SI32_INTRINSIC 0)
+  set(HAS_MM_STOREU_SI32_INTRINSIC 0)
 endif()
 
 # check whether we can the SSE4.2-intrinsics are available -> we check for the presence of the file
