--- a/lib/colortwist_config.h.in
+++ b/lib/colortwist_config.h.in
@@ -6,6 +6,8 @@
 
 //#define COLORTWISTLIB_HASSSE42_INTRINSICS @COLORTWISTLIB_HASSSE42_INTRINSICS@ // whether the header <nmmintrin.h> is available or not (associated with the SSE4.2 instruction set))
 #define COLORTWISTLIB_HAS_MM_LOADU_SI16_INTRINSICS @HAS_MM_LOADU_SI16_INTRINSIC@
+#define COLORTWISTLIB_HAS_MM_LOADU_SI32_INTRINSICS @HAS_MM_LOADU_SI32_INTRINSIC@
+#define COLORTWISTLIB_HAS_MM_STOREU_SI32_INTRINSICS @HAS_MM_STOREU_SI32_INTRINSIC@
 
 #define COLORTWISTLIB_HASNEON  @COLORTWIST_HAS_NEON@
 
