--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,5 +1,7 @@
-cmake_minimum_required(VERSION 3.0.0)
-project(libcolortwist VERSION 0.1.0)
+#cmake_minimum_required(VERSION 3.0.0)
+#cmake_policy(SET CMP0054 NEW)
+
+#project(libcolortwist VERSION 0.1.0)
 
 INCLUDE(CheckIncludeFiles)
 include(CheckSymbolExists)
@@ -162,21 +164,19 @@ target_include_directories (libcolortwist PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 # this is necessary so that we can find "colortwist_config.h" which we created above
 target_include_directories(libcolortwist PRIVATE  ${CMAKE_CURRENT_BINARY_DIR})  
 
-message(STATUS "HOST-ARCHITECTURE: " ${CMAKE_SYSTEM_PROCESSOR})
+message(STATUS "HOST-ARCHITECTURE: " ${CMAKE_SYSTEM_PROCESSOR}  ${CMAKE_CXX_COMPILER_ID})
 
 if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "AMD64" OR ${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64") 
-  if (MSVC)
+  if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    set_source_files_properties(colortwist_avx.cpp PROPERTIES COMPILE_FLAGS /arch:AVX2)
-  endif()
-  if (CMAKE_COMPILER_IS_GNUCXX)
+  elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    set_source_files_properties(colortwist_avx.cpp PROPERTIES COMPILE_FLAGS "-mfma -mavx2")
    set_source_files_properties(colortwist_sse.cpp PROPERTIES COMPILE_FLAGS "-msse4.1")
   endif()
 elseif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "i686" OR ${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_32")
-  if (MSVC)
+  if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    set_source_files_properties(colortwist_avx.cpp PROPERTIES COMPILE_FLAGS /arch:AVX2)
-  endif()
-  if (CMAKE_COMPILER_IS_GNUCXX)
+  elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    set_source_files_properties(colortwist_avx.cpp PROPERTIES COMPILE_FLAGS "-mfma -mavx2")
    set_source_files_properties(colortwist_sse.cpp PROPERTIES COMPILE_FLAGS "-msse4.1")
   endif()
