--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -166,7 +166,7 @@ target_include_directories(libcolortwist PRIVATE  ${CMAKE_CURRENT_BINARY_DIR})
 
 message(STATUS "HOST-ARCHITECTURE: " ${CMAKE_SYSTEM_PROCESSOR}  ${CMAKE_CXX_COMPILER_ID})
 
-if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "AMD64" OR ${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64") 
+if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "amd64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64") 
   message(STATUS "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX")
   if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    set_source_files_properties(colortwist_avx.cpp PROPERTIES COMPILE_FLAGS /arch:AVX2)
