--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
 set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmakemodules" ${CMAKE_MODULE_PATH})
 
-FIND_PACKAGE (IPP REQUIRED )
+#FIND_PACKAGE (IPP REQUIRED )
 
 set(CMAKE_CXX_STANDARD 11)
 
