--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -59,8 +59,8 @@
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
-      "inheritEnvironments": [ "linux_x64" ],
-      "remoteMachineName": "-859745167;192.168.2.238 (username=jbohl, port=2222, authentication=Password)",
+      "inheritEnvironments": [ "linux_x86" ],
+      "remoteMachineName": "1659364886;stream7-debian (username=jbohl, port=22, authentication=Password)",
       "remoteCMakeListsRoot": "$HOME/.vs/${projectDirName}/${workspaceHash}/src",
       "remoteBuildRoot": "$HOME/.vs/${projectDirName}/${workspaceHash}/out/build/${name}",
       "remoteInstallRoot": "$HOME/.vs/${projectDirName}/${workspaceHash}/out/install/${name}",
