--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -40,10 +40,10 @@ else()
 endif()
 
 if (COLORTWIST_HAS_IMMINTRIN )
-  include(CheckSourceCompiles)
-  check_source_compiles(C
+  include(CheckCXXSourceRuns)
+  check_cxx_source_runs(
   "#include <immintrin.h>
-  int main(void) { unsigned short u=1234; _mm_loadu_si16(&u); return 1; }"
+  int main(void) { unsigned short u=1234; _mm_loadu_si16(&u); return 0; }"
   HAS_MM_LOADU_SI16_INTRINSIC)
 #  check_symbol_exists(_mm_loadu_si16 immintrin.h HAS_MM_LOADU_SI16_INTRINSIC)
   if (HAS_MM_LOADU_SI16_INTRINSIC)
@@ -53,9 +53,9 @@ if (COLORTWIST_HAS_IMMINTRIN )
   endif()
 
   include(CheckSourceCompiles)
-  check_source_compiles(C
+  check_cxx_source_runs(
   "#include <immintrin.h>
-  int main(void) { unsigned int u=12345678; _mm_loadu_si32(&u); return 1; }"
+  int main(void) { unsigned int u=12345678; _mm_loadu_si32(&u); return 0; }"
   HAS_MM_LOADU_SI32_INTRINSIC)
 #  check_symbol_exists(_mm_loadu_si32 immintrin.h HAS_MM_LOADU_SI32_INTRINSIC)
   if (HAS_MM_LOADU_SI32_INTRINSIC)
@@ -65,9 +65,9 @@ if (COLORTWIST_HAS_IMMINTRIN )
   endif()
 
 include(CheckSourceCompiles)
-  check_source_compiles(C
+  check_cxx_source_runs(
   "#include <immintrin.h>
-  int main(void) { unsigned int u=0;  __m128i mmreg = _mm_set_epi8(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15); _mm_storeu_si32(&u, mmreg); return 1; }"
+  int main(void) { unsigned int u=0;  __m128i mmreg = _mm_set_epi8(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15); _mm_storeu_si32(&u, mmreg); return 0; }"
   HAS_MM_STOREU_SI32_INTRINSIC)
 #  check_symbol_exists(_mm_storeu_si32 immintrin.h HAS_MM_STOREU_SI32_INTRINSIC)
   if (HAS_MM_STOREU_SI32_INTRINSIC)
